--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,111 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <title>KV Careers</title>
-   </head>
-   <body>
-      <h1>KV Careers</h1>
-     <img src="static/banner.jpg" height="320">
-     <h2>About KV</h2>
-     <p>KV is a leading company in the field of IT services.</p>
-    </body>
+
+<head>
+  <title>KV Careers</title>
+  <style>
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: linear-gradient(135deg, rgb(241, 219, 192) 0%, rgb(250, 250, 250) 100%);
+    }
+
+    h1 {
+      font-size: 40px;
+      font-family: Roboto;
+      font-weight: bold;
+      color: rgb(173, 146, 114);
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 32px;
+      font-family: Roboto;
+      font-weight: bold;
+      color: rgb(173, 146, 114);
+      text-align: center;
+    }
+
+    .company-info-text {
+      font-family: Roboto;
+      color: rgb(50, 50, 50);
+      text-align: center;
+    }
+
+    .job-text {
+      font-family: Roboto;
+      color: rgb(50, 50, 50);
+      text-align: center;
+    }
+
+    .copyright-text {
+      font-family: Roboto;
+      color: rgb(50, 50, 50);
+      text-align: center;
+    }
+
+    strong {
+      color: rgb(173, 146, 114);
+    }
+
+    button {
+      font-family: Roboto;
+      color: white;
+      text-align: center;
+      background-color: rgb(173, 146, 114);
+      border-radius: 5px;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+
+    #banner {
+      width: 100%;
+      height: 360px;
+      object-fit: cover;
+      object-position: center bottom;
+      margin-bottom: 10px;
+    }
+
+    #contact-us-button {
+      background-color: rgb(173, 146, 114);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      cursor: pointer;
+      margin-top: 10px;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    #contact-us-button:hover {
+      background-color: rgb(146, 122, 92);
+    }
+    
+  </style>
+</head>
+
+<body>
+  <div id="container">
+    <h1>KV Careers</h1>
+    <img id="banner" src="static/banner.jpg">
+    <h2>About KV</h2>
+    <p class="company-info-text">KV is a leading company in the field of IT services.</p>
+    <div class="company-info">
+    <p class="company-info-text">We specialize in <strong>Software Development</strong> and <strong>Cloud Solutions</strong>.</p>
+    <p class="company-info-text">Join our dynamic team and be part of our innovative journey in technology!</p>
+    <h2>Open Positions</h2>
+    <div>
+      <p class="job-text">TODO - Show the jobs here</p>
+    </div>
+      <button id="contact-us-button">Contact Us</button>
+      <p class="copyright-text">Copyright 2025, KV</p>
+    </div>
+  </div>
+</body>
+
 </html>
